# jukebox_rust

./: .gitignore  Cargo.toml  Makefile  README.md  sqlite.db
entity/: Cargo.toml
entity/src/: lib.rs  user.rs  video.rs
jukebox_axum/: Cargo.toml  README.md  askama.toml
jukebox_axum/src/: login.rs  main.rs  music_player.rs  music_player2.rs  search.rs  templates.rs  websocket.rs
jukebox_axum/src/login/: error.rs  jwt_token.rs
jukebox_axum/src/sql/: user.rs
jukebox_axum/src/templates/: index.rs  login.rs
jukebox_axum/templates/: index.html  login.html  sign.html
jukebox_yew/: .gitignore  Cargo.toml  README.md  index.html
jukebox_yew/src/: main.rs  playlist.rs
my_youtube_extractor/: .gitignore  Cargo.toml  README.md
my_youtube_extractor/src/: lib.rs  test.rs  youtube_extractor.rs  youtube_info.rs
src/: lib.rs
