[package]
name = "jukebox_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "jukebox_axum", "jukebox_yew", "my_youtube_extractor"]

[dependencies]
my_youtube_extractor = { path = "./my_youtube_extractor" }
bincode = "2.0.0-rc.2"
gloo-net = "0.2"
axum = { version = "0.6", features = ["ws"], optional = true }
#serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.*"

#[features]
## Defines a feature named `webp` that does not enable any other features.
#axum = ["dep:axum"]
