[package]
name = "jukebox_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_youtube_extractor = { path = "../my_youtube_extractor" }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.6", features = ["headers", "macros", "form", "query", "ws"] }
axum-extra = { version = "0.4", features = ["cookie", "cookie-private"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
askama = "0.11"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3", features = ["full"] }
tower = "0.4"
jukebox_rust = { path = "..", features = ["axum"] }
anyhow = "1.0"
jsonwebtoken = "8.2"
once_cell = "1.17"
sea-orm = { version = "0.10", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
entity = { path = "../entity", features = ["video", "user", "seaorm"] }
libmpv = { git = "https://github.com/ParadoxSpiral/libmpv-rs" }
