[package]
name = "jukebox_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
my_youtube_extractor = { path = "../my_youtube_extractor" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
futures = "0.3"
gloo-net = "0.2"
serde_json = "1.0"
gloo = "0.8"
yew-agent = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2.*" }
