[package]
name = "jukebox_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity", features = ["video"] }
jukebox_rust = { path = ".." }
log = "0.4"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
futures = "0.3"
serde_json = "1.0"
gloo = "0.8"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2.*" }
anyhow = "1.0.*"
bincode = "2.0.0-rc.2"
