[package]
name = "my_youtube_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1"
serde_json = "1.0"
regex = "1"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
bincode = "2.0.0-rc.2"

[dev-dependencies] # Dependencies used only for test purposes
tokio = { version = "1", features = ["full"] }
